<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:title="@string/home"
        android:icon="@drawable/ic_home_24" />
    <item
        android:id="@+id/upcomingFragment"
        android:title="@string/upcoming"
        android:icon="@drawable/ic_upcoming_24" />
    <item
        android:id="@+id/finishedFragment"
        android:title="@string/finished"
        android:icon="@drawable/ic_finished_24" />
    <item
        android:id="@+id/favoriteFragment"
        android:icon="@drawable/ic_favorite_24"
        android:title="@string/favorite" />
    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_settings_24"
        android:title="@string/settings" />
</menu>